vivado/214_revisao/proj_extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:13 ; elapsed = 00:00:26 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21965 ; free virtual = 44681
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:13 ; elapsed = 00:00:26 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21965 ; free virtual = 44681
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:15 ; elapsed = 00:00:28 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21964 ; free virtual = 44680
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [XFORM 203-602] Inlining function 'r100_cs_track_clear' into 'main' (extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:111) automatically.
WARNING: [SYNCHK 200-77] The top function 'main' has no outputs. Possible cause(s) are: (1) Output parameters are passed by value; (2) intended outputs (parameters or global variables) are never written; (3) there are infinite loops.
INFO: [SYNCHK 200-10] 0 error(s), 1 warning(s).
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:00:15 ; elapsed = 00:00:28 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21964 ; free virtual = 44680
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:00:15 ; elapsed = 00:00:28 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21946 ; free virtual = 44662
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:00:15 ; elapsed = 00:00:28 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21946 ; free virtual = 44662
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'main' ...
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'main' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 28.18 seconds; current allocated memory: 94.928 MB.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 0.01 seconds; current allocated memory: 94.964 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'main' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on function 'main' to 'ap_ctrl_hs'.
WARNING: [RTGEN 206-101] Setting dangling out port 'main/ap_return' to 0.
INFO: [RTGEN 206-100] Finished creating RTL model for 'main'.
INFO: [HLS 200-111]  Elapsed time: 0.01 seconds; current allocated memory: 95.037 MB.
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:00:15 ; elapsed = 00:00:29 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 21945 ; free virtual = 44661
INFO: [VHDL 208-304] Generating VHDL RTL for main.
INFO: [VLOG 209-307] Generating Verilog RTL for main.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/aut/proj_extr_.php-srcextstandardcrypt_freesec.c_do_des_with_main.c'.
INFO: [HLS 200-10] Adding design file 'extr_.php-srcextstandardcrypt_freesec.c_do_des_with_main.c' to the project
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/aut/proj_extr_.php-srcextstandardcrypt_freesec.c_do_des_with_main.c/solution1'.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:01:44 ; elapsed = 00:09:45 . Memory (MB): peak = 905.359 ; gain = 205.039 ; free physical = 27026 ; free virtual = 37445
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:01:44 ; elapsed = 00:09:45 . Memory (MB): peak = 905.359 ; gain = 205.039 ; free physical = 27026 ; free virtual = 37445
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:01:46 ; elapsed = 00:09:47 . Memory (MB): peak = 905.359 ; gain = 205.039 ; free physical = 27027 ; free virtual = 37445
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-11] extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:32: Argument 'track.textures.pitch' of function 'r100_cs_track_clear' (extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:32) has an unsynthesizable type (possible cause(s): pointer to pointer or global pointer).
ERROR: [SYNCHK 200-61] extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:60: unsupported memory access on variable 'track.cb.pitch' which is (or contains) an array with unknown size at compile time.
INFO: [SYNCHK 200-10] 2 error(s), 0 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:1:
extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:21:246: error: array has incomplete element type 'TYPE_6__' (aka 'struct TYPE_12__')
struct r100_cs_track {int cb_dirty; int zb_dirty; int tex_dirty; int aa_dirty; int num_cb; int num_texture; int maxy; int separate_cube; int aaresolve; int z_enabled; int vtx_size; int immd_dwords; int num_arrays; int max_indx; TYPE_6__ textures[100]; TYPE_5__ arrays[100]; TYPE_4__ zb; TYPE_3__ cb[100]; TYPE_2__ aa; } ;
                                                                                                                                                                                                                                                     ^
extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:10:16: note: forward declaration of 'struct TYPE_12__'
typedef struct TYPE_12__ TYPE_6__ ;
               ^
extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:21:268: error: array has incomplete element type 'TYPE_5__' (aka 'struct TYPE_11__')
struct r100_cs_track {int cb_dirty; int zb_dirty; int tex_dirty; int aa_dirty; int num_cb; int num_texture; int maxy; int separate_cube; int aaresolve; int z_enabled; int vtx_size; int immd_dwords; int num_arrays; int max_indx; TYPE_6__ textures[100]; TYPE_5__ arrays[100]; TYPE_4__ zb; TYPE_3__ cb[100]; TYPE_2__ aa; } ;
                                                                                                                                                                                                                                                                           ^
extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:11:16: note: forward declaration of 'struct TYPE_11__'
typedef struct TYPE_11__ TYPE_5__ ;
               ^
extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:21:299: error: array has incomplete element type 'TYPE_3__' (aka 'struct TYPE_9__')
struct r100_cs_track {int cb_dirty; int zb_dirty; int tex_dirty; int aa_dirty; int num_cb; int num_texture; int maxy; int separate_cube; int aaresolve; int z_enabled; int vtx_size; int immd_dwords; int num_arrays; int max_indx; TYPE_6__ textures[100]; TYPE_5__ arrays[100]; TYPE_4__ zb; TYPE_3__ cb[100]; TYPE_2__ aa; } ;
                                                                                                                                                                                                                                                                                                          ^
extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:13:16: note: forward declaration of 'struct TYPE_9__'
typedef struct TYPE_9__ TYPE_3__ ;
               ^
3 errors generated.
INFO: [HLS 200-10] Opening project '/home/vivado/HLStools/vivado/214_revisao/proj_extr_.linuxdriversgpudrmradeonr600.c_rs780_pm_init_profile_with_main.c'.
ERROR: [HLS 200-70] You must open a solution first
INFO: [HLS 200-10] Opening solution '/home/vivado/HLStools/vivado/214_revisao/proj_extr_.linuxdriversgpudrmradeonr600.c_rs780_pm_init_profile_with_main.c/solution1'.
